--- a/packages/core/bin/config/mainnet/app.json
+++ b/packages/core/bin/config/mainnet/app.json
@@ -8,22 +8,43 @@
                 "package": "@solar-network/core-state"
             },
             {
-                "package": "@solar-network/core-database"
+                "package": "@solar-network/core-database",
             },
             {
                 "package": "@solar-network/core-transactions"
             },
             {
-                "package": "@solar-network/core-transaction-pool"
+                "package": "@solar-network/core-transaction-pool",
+                "options": {
+                    "dynamicFees": {
+                        "enabled": false
+                    }
+                }
             },
             {
-                "package": "@solar-network/core-p2p"
+                "package": "@solar-network/core-p2p",
+                "options": {
+                    "minimumNetworkReach": 1
+                }
             },
             {
                 "package": "@solar-network/core-blockchain"
             },
             {
-                "package": "@solar-network/core-api"
+                "package": "@solar-network/core-api",
+                "options": {
+                    "plugins": {
+                        "cache": {
+                            "enabled": false
+                        },
+                        "pagination": {
+                            "limit": 250
+                        }
+                    },
+                    "options": {
+                        "estimateTotalCount": false
+                    }
+                }
             },
             {
                 "package": "@solar-network/core-webhooks"
@@ -48,16 +69,35 @@
                 "package": "@solar-network/core-transactions"
             },
             {
-                "package": "@solar-network/core-transaction-pool"
+                "package": "@solar-network/core-transaction-pool",
+                "options": {
+                    "dynamicFees": {
+                        "enabled": false
+                    }
+                }
             },
             {
-                "package": "@solar-network/core-p2p"
+                "package": "@solar-network/core-p2p",
+                "options": {
+                    "minimumNetworkReach": 1
+                }
             },
             {
                 "package": "@solar-network/core-blockchain"
             },
             {
-                "package": "@solar-network/core-api"
+                "package": "@solar-network/core-api",
+                "options": {
+                    "cache": {
+                        "enabled": false
+                    },
+                    "pagination": {
+                        "limit": 250
+                    },
+                    "options": {
+                        "estimateTotalCount": false
+                    }
+                }
             },
             {
                 "package": "@solar-network/core-webhooks"
