--- a/plugins/helios-crypto/package.json
+++ b/plugins/helios-crypto/package.json
@@ -15,6 +15,9 @@
         "clean": "rimraf dist",
         "compile": "../../node_modules/typescript/bin/tsc"
     },
+    "dependencies": {
+        "deepmerge": "4.2.2"
+    },
     "devDependencies": {
         "@solar-network/crypto": "workspace:*"
     }
