chore: increase max transactions per request

--- a/packages/core/bin/config/mainnet/app.json
+++ b/packages/core/bin/config/mainnet/app.json
@@ -16,6 +16,7 @@
             {
                 "package": "@solar-network/core-transaction-pool",
                 "options": {
+                    "maxTransactionsPerRequest": 150,
                     "dynamicFees": {
                         "enabled": false
                     }
@@ -74,6 +75,7 @@
             {
                 "package": "@solar-network/core-transaction-pool",
                 "options": {
+                    "maxTransactionsPerRequest": 150,
                     "dynamicFees": {
                         "enabled": false
                     }
